combine two arrays in XMLHttpRequestException.cpp into one https://bugs.webkit.org/show_bug.cgi?id=83443

Patch by Lu Guanqun <guanqun.lu@intel.com> on 2012-04-09
Reviewed by Kentaro Hara.

No new tests requied.

* xml/XMLHttpRequestException.cpp:
(XMLHttpRequestExceptionNameDescription):
(WebCore):
(WebCore::XMLHttpRequestException::initializeDescription):

Canonical link: https://commits.webkit.org/100989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113679 268f45cc-cd09-0410-ab3c-d52691b4dbfc